transform "running" parameter of scenario into "IsLocked" parameter; only admins can change this parameter, all operations other than READ fail if scenario is locked - also for associated components #63
